feat: 성능과 상관없는 v3에서의 구현 및 수정 사항 반영