@@ -9,8 +9,6 @@ import com.yoger.productserviceorganization.product.domain.model.ProductState;
 import com.yoger.productserviceorganization.product.mapper.ProductMapper;
 import java.time.Duration;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
@@ -18,34 +16,37 @@ import org.springframework.stereotype.Repository;
 @Repository
 @RequiredArgsConstructor
 public class ProductRepositoryImpl implements ProductRepository {
-    private static final String PRODUCT_ENTITY_CACHE = "productEntity";
-    private static final String PRODUCT_ENTITY_CACHE_BY_STATE = "productEntitiesByState";
-    private static final String PRODUCT_ENTITY_CACHE_ALL = "allProductEntities";
+    private static final String PRODUCT_ENTITY_CACHE = "productEntity : ";
+    private static final String PRODUCT_ENTITY_CACHE_BY_STATE = "productEntitiesByState : ";
+    private static final String PRODUCT_ENTITY_STOCK = "productEntityStock : ";
 
     private final JpaProductRepository jpaProductRepository;
     private final RedisTemplate<String, Object> redisTemplate;
 
     @Override
     public Product findById(Long productId) {
-        String cacheKey = PRODUCT_ENTITY_CACHE + " : " + productId;
+        return ProductMapper.toDomainFrom(findEntityByIdWithCaching(productId));
+    }
+
+    private ProductEntity findEntityByIdWithCaching(Long productId) {
+        String cacheKey = PRODUCT_ENTITY_CACHE + productId;
         ProductEntity cachedEntity = (ProductEntity) redisTemplate.opsForValue().get(cacheKey);
         if (cachedEntity != null) {
-            return ProductMapper.toDomainFrom(cachedEntity);
+            return cachedEntity;
         }
         ProductEntity productEntity = jpaProductRepository.findById(productId)
                 .orElseThrow(() -> new ProductNotFoundException(productId));
         redisTemplate.opsForValue().set(cacheKey, productEntity, Duration.ofMinutes(5));
-        return ProductMapper.toDomainFrom(productEntity);
+        return productEntity;
     }
 
     @Override
     public Product save(Product product) {
         ProductEntity productEntity = ProductMapper.toEntityFrom(product);
         ProductEntity savedEntity = jpaProductRepository.save(productEntity);
-        String cacheKey = PRODUCT_ENTITY_CACHE + " : " + savedEntity.getId();
+        String cacheKey = PRODUCT_ENTITY_CACHE + savedEntity.getId();
         redisTemplate.opsForValue().set(cacheKey, savedEntity, Duration.ofMinutes(5));
 
-        evictCacheForAllProducts();
         evictCacheForState(savedEntity.getState());
 
         return ProductMapper.toDomainFrom(savedEntity);
@@ -53,12 +54,12 @@ public class ProductRepositoryImpl implements ProductRepository {
 
     @Override
     public List<Product> findByState(ProductState state) {
-        String cacheKey = PRODUCT_ENTITY_CACHE_BY_STATE + " : " + state.name();
+        String cacheKey = PRODUCT_ENTITY_CACHE_BY_STATE + state.name();
         List<ProductEntity> cachedEntities = (List<ProductEntity>) redisTemplate.opsForValue().get(cacheKey);
         if (cachedEntities != null) {
             return cachedEntities.stream()
                     .map(ProductMapper::toDomainFrom)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         List<ProductEntity> productEntities = jpaProductRepository.findByState(state);
@@ -66,37 +67,19 @@ public class ProductRepositoryImpl implements ProductRepository {
         redisTemplate.opsForValue().set(cacheKey, productEntities, Duration.ofMinutes(5));
         return productEntities.stream()
                 .map(ProductMapper::toDomainFrom)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Product> findAll() {
-        String cacheKey = PRODUCT_ENTITY_CACHE_ALL + " : allProducts";
-        List<ProductEntity> cachedEntities = (List<ProductEntity>) redisTemplate.opsForValue().get(cacheKey);
-        if (cachedEntities != null) {
-            return cachedEntities.stream()
-                    .map(ProductMapper::toDomainFrom)
-                    .collect(Collectors.toList());
-        }
-
-        List<ProductEntity> productEntities = jpaProductRepository.findAll();
-
-        redisTemplate.opsForValue().set(cacheKey, productEntities, Duration.ofMinutes(5));
-
-        return productEntities.stream()
-                .map(ProductMapper::toDomainFrom)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void deleteById(Long productId) {
+        ProductState productState = jpaProductRepository.findStateById(productId)
+                .orElseThrow(() -> new ProductNotFoundException(productId));
         jpaProductRepository.deleteById(productId);
 
-        String cacheKey = PRODUCT_ENTITY_CACHE + " : " + productId;
+        String cacheKey = PRODUCT_ENTITY_CACHE + productId;
         redisTemplate.delete(cacheKey);
 
-        evictCacheForAllProducts();
-        evictAllStateCaches();
+        evictCacheForState(productState);
     }
 
     @Override
@@ -110,9 +93,8 @@ public class ProductRepositoryImpl implements ProductRepository {
     public Integer updateStock(Long productId, Integer quantity) {
         Integer result = jpaProductRepository.updateStock(productId, quantity);
         if (result > 0) {
-            String cacheKey = PRODUCT_ENTITY_CACHE + " : " + productId;
-            ProductEntity updatedEntity = jpaProductRepository.findById(productId)
-                    .orElseThrow(() -> new ProductNotFoundException(productId));
+            String cacheKey = PRODUCT_ENTITY_CACHE + productId;
+            ProductEntity updatedEntity = findEntityByIdWithCaching(productId);
             redisTemplate.opsForValue().set(cacheKey, updatedEntity, Duration.ofMinutes(5));
             // No need to evict all caches since stock update may not affect other cached data
         }
@@ -133,23 +115,7 @@ public class ProductRepositoryImpl implements ProductRepository {
     }
 
     private void evictCacheForState(ProductState state) {
-        String cacheKey = PRODUCT_ENTITY_CACHE_BY_STATE + " : " + state.name();
+        String cacheKey = PRODUCT_ENTITY_CACHE_BY_STATE + state.name();
         redisTemplate.delete(cacheKey);
-    }
-
-    private void evictCacheForAllProducts() {
-        String pattern = PRODUCT_ENTITY_CACHE_ALL + " : *";
-        Set<String> keys = redisTemplate.keys(pattern);
-        if (keys != null && !keys.isEmpty()) {
-            redisTemplate.delete(keys);
-        }
-    }
-
-    private void evictAllStateCaches() {
-        String pattern = PRODUCT_ENTITY_CACHE_BY_STATE + " : *";
-        Set<String> keys = redisTemplate.keys(pattern);
-        if (keys != null && !keys.isEmpty()) {
-            redisTemplate.delete(keys);
-        }
     }
 }
